Changes towards version 0.2:
- DCQ is now accessed uniformly by routines in gfx_common.c
- Fixed OpenGL colors on MacOS X -Mika
- Added a sane cmd-line naming scheme: --opt=(pc|3do) see --help for more -PBlue
- Added new font effect (PC-lander messages), and set colors for text -PBlue
- Use correct font for 'CAPTAIN', 'FUEL', and 'CREW' is status screen -PBlue
- Added gradiated font support (for ship name), and PC-font option -PBlue
- Minor fixes to PCMenu by fOSSiL, Nic, PhracturedBlue
- Updated mingw support with better directions, and easier build -PBlue
- PCMenus now suports 'settings', and menu font is correct -PhracturedBlue
- Added '-b' option to get PC Menus -PhracturedBlue
- Check for a deadlock in savedgames and try to continue -PhracturedBlue
- Added an option ('-a') to display 'PC-style' coarse-scan -PhracturedBlue
- Fixed deadlock races in new FlushGraphics method -PhracturedBlue
- FlushGraphics now waits and notifies on a per-thread level
- No longer using SHGetFolderPath on Windows - SvdB
- Key repeat is now enabled when typing text, from slayne
- Capital letter bug in new input code fixed, from slayne
- Oscilloscope now reacts to music when speech is disabled (OpenAL) -Mika
- Rewritten input code (better and adds joystick/pad support), from slayne
- Biadapt scaling for pure mode, from fOSSiL
- Saving user data in "%APPDATA%/Application Data" on windows - SvdB
- Melnorme comm fix, from TD.
- Planet scan font character fixes (micro.fon), from fOSSiL
- Temporary files are deleted on exit. - SvdB
- Font png's no longer need to have alpha channel, black background with
  white pixels is enough -Mika
- Added PC version intro/ending font, from VileRancour
- Added files for intro and ending sequence, from fOSSiL; extracted using
  Mudrony's scripts plus his own work.
- Added some corrected mods, from fOSSiL; extracted using Mudrony's scripts.
- Replaced add_sub_frame with arith_frame_blit -PhracturedBlue